--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-screens": "~3.20.0",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-dev-client": "~2.2.1",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
